--- a/Week3/day7/oddOrEven.ipynb
+++ b/Week3/day7/oddOrEven.ipynb
@@ -12,7 +12,9 @@
     "if number % 2 == 0:\n",
     "  print(f\"{number} is even\")\n",
     "else:\n",
-    "  print(f\"{number} is odd\")"
+    "  print(f\"{number} is odd\")\n",
+    "\n",
+    "  "
    ]
   }
  ],
