--- a/Week3/day7/oddOrEven.ipynb
+++ b/Week3/day7/oddOrEven.ipynb
@@ -2,19 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a42fe293",
+   "execution_count": 5,
+   "id": "62fea9a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is even\n"
+     ]
+    }
+   ],
    "source": [
-    "number = int(input(\"Enter a number: \"))\n",
+    "x = 24\n",
     "\n",
-    "if number % 2 == 0:\n",
-    "  print(f\"{number} is even\")\n",
+    "if x % 2 == 0:\n",
+    "    print(\"x is even\")\n",
     "else:\n",
-    "  print(f\"{number} is odd\")\n",
+    "    print(\"x is odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "87a19f33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x is odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 13\n",
     "\n",
-    "  "
+    "if x % 2 == 0:\n",
+    "    print(\"x is even\")\n",
+    "else:\n",
+    "    print(\"x is odd\")"
    ]
   }
  ],
