--- a/Week3/day7/output.ipynb
+++ b/Week3/day7/output.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "e8cc7273",
    "metadata": {},
    "outputs": [
@@ -12,6 +12,7 @@
      "text": [
       "False\n",
       "True\n",
+      "False\n",
       "False\n",
       "False\n"
      ]
@@ -24,20 +25,15 @@
     "# >>> \"3\" > 3\n",
     "# >>> \"Hello\" == \"hello\"\n",
     "\n",
-    "codesnippet = 5 < 3\n",
-    "print(codesnippet)\n",
+    "print(5 < 3)\n",
     "\n",
-    "secondcode = 3 == 3\n",
-    "print(secondcode)\n",
+    "print(3 == 3)\n",
     "\n",
-    "thirdcode = 3 == \"3\"\n",
-    "print(thirdcode)\n",
+    "print(3 == \"3\")\n",
     "\n",
-    "# fourthcode = \"3\" > 3\n",
-    "# print(int(fourthcode))\n",
+    "print(int(\"3\") > 3)\n",
     "\n",
-    "fifthcode = \"Hello\" == \"hello\"\n",
-    "print(fifthcode)"
+    "print(\"Hello\" == \"hello\")"
    ]
   }
  ],
