--- a/Week3/day7/whatsYourName.ipynb
+++ b/Week3/day7/whatsYourName.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "cd445c75",
    "metadata": {},
    "outputs": [
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "name = \"Laurie\"\n",
+    "name = str(input(\"Please Enter your name: \"))\n",
     "\n",
     "if name == \"Laurie\":\n",
     "    print('We are twins!')\n",
@@ -26,7 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "d9be996c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "08f86af8",
    "metadata": {},
    "outputs": [
@@ -39,7 +47,7 @@
     }
    ],
    "source": [
-    "name = \"Alex\"\n",
+    "name = str(input(\"Please Enter your name: \"))\n",
     "\n",
     "if name == \"Laurie\":\n",
     "    print('We are twins!')\n",
