--- a/Week4/day5/hangman.ipynb
+++ b/Week4/day5/hangman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "af224c8a",
    "metadata": {},
    "outputs": [],
@@ -12,31 +12,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "5aa83342",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def choose_word(logger=False): #choose a random word\n",
-    "    \n",
+    "#Choose random word\n",
+    "\n",
+    "def choose_word():\n",
     "    wordslist = ['correction', 'childish', 'beach', 'python', 'assertive', 'interference', 'complete', 'share', 'credit card', 'rush', 'south']\n",
-    "    \n",
-    "    word = random.choice(wordslist)\n",
+    "    return random.choice(wordslist)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a08a23da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_ _ _ _ _ _ _ _ _ _ _\n",
+      "Lives left: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#display the word\n",
     "\n",
-    "    MAX_WRONG = len(word) - 1\n",
+    "def display_word(wordslist, guessed_letters):\n",
+    "    display = \"\"\n",
+    "    for letter in wordslist:\n",
+    "        if letter in guessed_letters:\n",
+    "            display += letter + \" \"\n",
+    "        else:\n",
+    "            display += \"_ \"\n",
+    "    return display.strip()\n",
     "\n",
-    "    wordlenght = \"_\" * len(wordslist)\n",
+    "#Hangman\n",
     "\n",
-    "    wrongguess = 0\n",
+    "def hangman():\n",
+    "    correct_word = choose_word()\n",
+    "    guessed_letters = []\n",
+    "    lives = 6\n",
     "\n",
-    "    letterused = []\n",
+    "    while lives > 0:\n",
+    "        print(display_word(correct_word, guessed_letters))\n",
+    "        print(f\"Lives left: {lives}\")\n",
+    "        guess = input(\"Guess a letter: \").lower()\n",
     "\n",
-    "    print (\"Welcome to Hangman\")\n",
+    "        if len(guess) != 1 or not guess.isalpha():\n",
+    "            print(\"Invalid input. Please enter a single letter.\")\n",
+    "            continue\n",
     "\n",
-    "    while wrongguess < MAX_WRONG and wordlenght != word:\n",
-    "        print(word[wrongguess])\n",
-    "        print(\"\\nThe following letters has been used\\n\", letterused)\n",
-    "        print(\"\\nYou have guessed\\n\", wordlenght)\n"
+    "        if guess in guessed_letters:\n",
+    "            print(\"You already guessed that letter.\")\n",
+    "            continue\n",
+    "\n",
+    "        guessed_letters.append(guess)\n",
+    "\n",
+    "        if guess in correct_word:\n",
+    "            if \"_\" not in display_word(correct_word, guessed_letters):\n",
+    "                print(f\"Congratulations! You guessed the word: {correct_word}\")\n",
+    "                return\n",
+    "        else:\n",
+    "            lives -= 1\n",
+    "            print(\"Incorrect guess.\")\n",
+    "\n",
+    "    print(f\"You lost. The word was: {correct_word}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    hangman()"
    ]
   }
  ],
