added lives depending on the word's lenght

--- a/Week4/day5/hangman.ipynb
+++ b/Week4/day5/hangman.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "af224c8a",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "5aa83342",
    "metadata": {},
    "outputs": [],
@@ -34,8 +34,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_ _ _ _ _ _ _ _ _ _ _\n",
-      "Lives left: 6\n"
+      "_ _ _ _ _ _ _ _ _ _\n",
+      "Lives left: 10\n",
+      "Invalid input. Please enter a single letter.\n",
+      "_ _ _ _ _ _ _ _ _ _\n",
+      "Lives left: 10\n",
+      "c _ _ _ _ c _ _ _ _\n",
+      "Lives left: 10\n",
+      "You already guessed that letter.\n",
+      "c _ _ _ _ c _ _ _ _\n",
+      "Lives left: 10\n",
+      "Incorrect guess.\n",
+      "c _ _ _ _ c _ _ _ _\n",
+      "Lives left: 9\n"
      ]
     }
    ],
@@ -56,7 +67,7 @@
     "def hangman():\n",
     "    correct_word = choose_word()\n",
     "    guessed_letters = []\n",
-    "    lives = 6\n",
+    "    lives = len(list(correct_word))\n",
     "\n",
     "    while lives > 0:\n",
     "        print(display_word(correct_word, guessed_letters))\n",
