--- a/Week5/day10/zoo.ipynb
+++ b/Week5/day10/zoo.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "4072de51",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "argument of type 'method' is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 51\u001b[39m\n\u001b[32m     48\u001b[39m ramat_gan_safari = Zoo(\u001b[33m\"\u001b[39m\u001b[33mRamat Gan Safari\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     50\u001b[39m \u001b[38;5;66;03m# Step 3: Use the Zoo methods\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m51\u001b[39m \u001b[43mramat_gan_safari\u001b[49m\u001b[43m.\u001b[49m\u001b[43madd_animal\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mGiraffe\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     52\u001b[39m ramat_gan_safari.add_animal(\u001b[33m\"\u001b[39m\u001b[33mBear\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     53\u001b[39m ramat_gan_safari.add_animal(\u001b[33m\"\u001b[39m\u001b[33mBaboon\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mZoo.add_animal\u001b[39m\u001b[34m(self, new_animal)\u001b[39m\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34madd_animal\u001b[39m(\u001b[38;5;28mself\u001b[39m, new_animal):\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mnew_animal\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mnot\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mget_animals\u001b[49m:\n\u001b[32m      8\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew_animal\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m has been added to the zoo!\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "\u001b[31mTypeError\u001b[39m: argument of type 'method' is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Giraffe has been added to the zoo!\n",
+      "Bear has been added to the zoo!\n",
+      "Baboon has been added to the zoo!\n",
+      "The following animals are in the zoo ['Giraffe', 'Bear', 'Baboon']\n",
+      "Bear has been sold\n",
+      "The following animals are in the zoo ['Giraffe', 'Baboon']\n",
+      "B: ['Baboon']\n",
+      "G: ['Giraffe']\n"
      ]
     }
    ],
@@ -26,7 +28,8 @@
     "        self.animals = []\n",
     "\n",
     "    def add_animal(self, new_animal):\n",
-    "        if new_animal not in self.get_animals:\n",
+    "        if new_animal not in self.animals:\n",
+    "            self.animals.append(new_animal)\n",
     "            print(f\"{new_animal} has been added to the zoo!\")\n",
     "        else:\n",
     "            print(f\"{new_animal} already exists in the zoo.\")\n",
@@ -83,7 +86,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -97,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
