--- a/Week12/day1/hackaton.ipynb
+++ b/Week12/day1/hackaton.ipynb
@@ -664,6 +664,44 @@
    "source": [
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b8024f69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age          0\n",
+       "job          0\n",
+       "marital      0\n",
+       "education    0\n",
+       "default      0\n",
+       "balance      0\n",
+       "housing      0\n",
+       "loan         0\n",
+       "contact      0\n",
+       "day          0\n",
+       "month        0\n",
+       "duration     0\n",
+       "campaign     0\n",
+       "pdays        0\n",
+       "previous     0\n",
+       "poutcome     0\n",
+       "y            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
   }
  ],
  "metadata": {
