--- a/Week12/day1/hackaton.ipynb
+++ b/Week12/day1/hackaton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f52bcfbc",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4   unknown    5   may       226         1     -1         0  unknown  no  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5424dc5b",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,11 +207,242 @@
    "source": [
     "df.columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "40891326",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4521 entries, 0 to 4520\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column     Non-Null Count  Dtype \n",
+      "---  ------     --------------  ----- \n",
+      " 0   age        4521 non-null   int64 \n",
+      " 1   job        4521 non-null   object\n",
+      " 2   marital    4521 non-null   object\n",
+      " 3   education  4521 non-null   object\n",
+      " 4   default    4521 non-null   object\n",
+      " 5   balance    4521 non-null   int64 \n",
+      " 6   housing    4521 non-null   object\n",
+      " 7   loan       4521 non-null   object\n",
+      " 8   contact    4521 non-null   object\n",
+      " 9   day        4521 non-null   int64 \n",
+      " 10  month      4521 non-null   object\n",
+      " 11  duration   4521 non-null   int64 \n",
+      " 12  campaign   4521 non-null   int64 \n",
+      " 13  pdays      4521 non-null   int64 \n",
+      " 14  previous   4521 non-null   int64 \n",
+      " 15  poutcome   4521 non-null   object\n",
+      " 16  y          4521 non-null   object\n",
+      "dtypes: int64(7), object(10)\n",
+      "memory usage: 600.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f91e5dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>balance</th>\n",
+       "      <th>day</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>campaign</th>\n",
+       "      <th>pdays</th>\n",
+       "      <th>previous</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "      <td>4521.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>41.170095</td>\n",
+       "      <td>1422.657819</td>\n",
+       "      <td>15.915284</td>\n",
+       "      <td>263.961292</td>\n",
+       "      <td>2.793630</td>\n",
+       "      <td>39.766645</td>\n",
+       "      <td>0.542579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10.576211</td>\n",
+       "      <td>3009.638142</td>\n",
+       "      <td>8.247667</td>\n",
+       "      <td>259.856633</td>\n",
+       "      <td>3.109807</td>\n",
+       "      <td>100.121124</td>\n",
+       "      <td>1.693562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>-3313.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>104.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>39.000000</td>\n",
+       "      <td>444.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>185.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>49.000000</td>\n",
+       "      <td>1480.000000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>329.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>87.000000</td>\n",
+       "      <td>71188.000000</td>\n",
+       "      <td>31.000000</td>\n",
+       "      <td>3025.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>871.000000</td>\n",
+       "      <td>25.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               age       balance          day     duration     campaign  \\\n",
+       "count  4521.000000   4521.000000  4521.000000  4521.000000  4521.000000   \n",
+       "mean     41.170095   1422.657819    15.915284   263.961292     2.793630   \n",
+       "std      10.576211   3009.638142     8.247667   259.856633     3.109807   \n",
+       "min      19.000000  -3313.000000     1.000000     4.000000     1.000000   \n",
+       "25%      33.000000     69.000000     9.000000   104.000000     1.000000   \n",
+       "50%      39.000000    444.000000    16.000000   185.000000     2.000000   \n",
+       "75%      49.000000   1480.000000    21.000000   329.000000     3.000000   \n",
+       "max      87.000000  71188.000000    31.000000  3025.000000    50.000000   \n",
+       "\n",
+       "             pdays     previous  \n",
+       "count  4521.000000  4521.000000  \n",
+       "mean     39.766645     0.542579  \n",
+       "std     100.121124     1.693562  \n",
+       "min      -1.000000     0.000000  \n",
+       "25%      -1.000000     0.000000  \n",
+       "50%      -1.000000     0.000000  \n",
+       "75%      -1.000000     0.000000  \n",
+       "max     871.000000    25.000000  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "47993097",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age          0\n",
+       "job          0\n",
+       "marital      0\n",
+       "education    0\n",
+       "default      0\n",
+       "balance      0\n",
+       "housing      0\n",
+       "loan         0\n",
+       "contact      0\n",
+       "day          0\n",
+       "month        0\n",
+       "duration     0\n",
+       "campaign     0\n",
+       "pdays        0\n",
+       "previous     0\n",
+       "poutcome     0\n",
+       "y            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -225,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
