--- a/Week12/day1/hackaton.ipynb
+++ b/Week12/day1/hackaton.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "f52bcfbc",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "4   unknown    5   may       226         1     -1         0  unknown  no  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5424dc5b",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "ab94b140",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "2  cellular   16   apr       185         1    330         1  failure  no  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "73978136",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "b8024f69",
    "metadata": {},
    "outputs": [
@@ -694,13 +694,58 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80525c8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age  job          education\n",
+       "34   management   tertiary     54\n",
+       "32   management   tertiary     52\n",
+       "36   management   tertiary     49\n",
+       "32   blue-collar  secondary    43\n",
+       "31   management   tertiary     38\n",
+       "                               ..\n",
+       "66   retired      secondary     1\n",
+       "19   student      primary       1\n",
+       "67   retired      primary       1\n",
+       "61   housemaid    primary       1\n",
+       "22   admin.       secondary     1\n",
+       "Name: count, Length: 975, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#customer behaviour\n",
+    "\n",
+    "df[['age', 'job', 'education', 'marital']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6967eb85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[['loan']].value_counts()"
    ]
   }
  ],
