--- a/Week12/day1/hackathon.ipynb
+++ b/Week12/day1/hackathon.ipynb
@@ -3637,6 +3637,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ba35713a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4521 entries, 0 to 4520\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column             Non-Null Count  Dtype\n",
+      "---  ------             --------------  -----\n",
+      " 0   age                4521 non-null   int64\n",
+      " 1   balance            4521 non-null   int64\n",
+      " 2   job_blue-collar    4521 non-null   bool \n",
+      " 3   job_entrepreneur   4521 non-null   bool \n",
+      " 4   job_housemaid      4521 non-null   bool \n",
+      " 5   job_management     4521 non-null   bool \n",
+      " 6   job_retired        4521 non-null   bool \n",
+      " 7   job_self-employed  4521 non-null   bool \n",
+      " 8   job_services       4521 non-null   bool \n",
+      " 9   job_student        4521 non-null   bool \n",
+      " 10  job_technician     4521 non-null   bool \n",
+      " 11  job_unemployed     4521 non-null   bool \n",
+      " 12  job_unknown        4521 non-null   bool \n",
+      " 13  marital_married    4521 non-null   bool \n",
+      " 14  marital_single     4521 non-null   bool \n",
+      " 15  default_yes        4521 non-null   bool \n",
+      " 16  housing_yes        4521 non-null   bool \n",
+      " 17  loan_yes           4521 non-null   bool \n",
+      " 18  poutcome_other     4521 non-null   bool \n",
+      " 19  poutcome_success   4521 non-null   bool \n",
+      " 20  poutcome_unknown   4521 non-null   bool \n",
+      " 21  y_yes              4521 non-null   bool \n",
+      "dtypes: bool(20), int64(2)\n",
+      "memory usage: 159.1 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_encoded.info()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fc76e0cf",
    "metadata": {},
