--- a/Week4/day5/tictactoe.ipynb
+++ b/Week4/day5/tictactoe.ipynb
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fb97047f",
    "metadata": {},
    "outputs": [
@@ -211,47 +211,13 @@
       " ['_' '_' '_']\n",
       " ['_' '_' '_']]\n",
       "----------------\n",
-      "Player 1: Laurie (X)\n",
-      "Player 2: Asmo (O)\n",
+      "Player 1: lau (O)\n",
+      "Player 2: ken (X)\n",
       "--------------\n",
-      "[['X' '_' '_']\n",
-      " ['_' '_' '_']\n",
-      " ['_' '_' '_']]\n",
-      "----------------\n",
-      "[['X' '_' '_']\n",
+      "[['_' '_' '_']\n",
       " ['_' 'O' '_']\n",
       " ['_' '_' '_']]\n",
-      "----------------\n",
-      "[['X' '_' '_']\n",
-      " ['_' 'O' 'X']\n",
-      " ['_' '_' '_']]\n",
-      "----------------\n",
-      "Invalid input. Please enter numbers between 1 and 3.\n",
-      "Invalid input. Please enter numbers between 1 and 3.\n",
-      "This cell [1, 1] is already occupid, Please choose another cell\n",
-      "[['X' '_' '_']\n",
-      " ['_' 'O' 'X']\n",
-      " ['_' '_' 'O']]\n",
-      "----------------\n",
-      "This cell [1, 1] is already occupid, Please choose another cell\n",
-      "[['X' '_' '_']\n",
-      " ['X' 'O' 'X']\n",
-      " ['_' '_' 'O']]\n",
-      "----------------\n",
-      "[['X' '_' '_']\n",
-      " ['X' 'O' 'X']\n",
-      " ['O' '_' 'O']]\n",
-      "----------------\n",
-      "This cell [1, 0] is already occupid, Please choose another cell\n",
-      "[['X' 'X' '_']\n",
-      " ['X' 'O' 'X']\n",
-      " ['O' '_' 'O']]\n",
-      "----------------\n",
-      "[['X' 'X' '_']\n",
-      " ['X' 'O' 'X']\n",
-      " ['O' 'O' 'O']]\n",
-      "----------------\n",
-      "Congratulations Asmo! You have won the game!\n"
+      "----------------\n"
      ]
     }
    ],
